<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_view_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"

                app:liftOnScroll="true">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_height"

                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:title="@string/search_mars_photo"
                    app:layout_scrollFlags="scroll"
                    />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/allerta"
                android:textAllCaps="false"
                android:text="@string/choose_date"

                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:id="@+id/date_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_type"

                style="@style/BaseStyleForDescriptionFragmentTextView"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/choose_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/mars_sol_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mars_soll"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/allerta"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_sol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/switch_eath_date"
                />

                <TextView
                    android:id="@+id/eath_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earth_datee"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/allerta"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mars_sol_label"
                    />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_eath_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"

                app:layout_constraintStart_toEndOf="@id/eath_date_label"
                app:layout_constraintTop_toBottomOf="@id/switch_sol"
                />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:hint="@string/write_here"
                    android:inputType="date"

                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_eath_date"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_rover_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_rover"

                style="@style/BaseStyleForSearchFragmentButtons"
                />

            <RadioGroup
                android:id="@+id/choose_rover_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/curiosity_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/curiosity"
                    android:textColor="@android:color/black"

                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/opportunity_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/opportunity"
                    android:textColor="@color/black"

                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/spirit_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/allerta"
                    android:text="@string/spirit"
                    android:textColor="@color/black"

                    android:textSize="15sp" />

            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/choose_camera_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_camera"

                style="@style/BaseStyleForSearchFragmentButtons"
                />

            <RadioGroup
                android:id="@+id/choose_camera_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/FHAZ_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fhaz"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/RHAZ_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/rhaz"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/MAST_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/mast"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/CHEMCAM_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/chemcam"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/MAHLI_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/mahli"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/MARDI_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/mardi"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/NAVCAM_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/navcam"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/PANCAM_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/pancam"

                    android:layout_marginStart="8dp"
                    />

                <RadioButton
                    android:id="@+id/MINITES_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/allerta"
                    android:text="@string/minites"

                    android:layout_marginStart="8dp"
                    />

            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"

                style="@style/BaseStyleForSearchFragmentButtons"

                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>