<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"

                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/search_mars_photo"
                app:layout_scrollFlags="scroll"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/allerta"
            android:textAllCaps="false"
            android:text="@string/choose_date"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"

            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_rover_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_rover"

            style="@style/BaseStyleForSearchFragmentButtons"

            app:layout_constraintTop_toBottomOf="@id/choose_date_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/choose_camera_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_camera"

            style="@style/BaseStyleForSearchFragmentButtons"

            app:layout_constraintTop_toBottomOf="@id/choose_rover_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="20sp"
            android:fontFamily="@font/allerta"
            android:textAllCaps="false"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>