<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"

            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"

                app:title="@string/mars_photo"
                app:layout_scrollFlags="scroll"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:menu="@menu/description_mars_photo_menu"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/mars_image"
                    android:layout_width="0dp"
                    android:layout_height="350dp"

                    style="@style/BaseStyleForImageView"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/sol_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mars_sol"

                        style="@style/BaseStyleForDescriptionFragmentTextView"

                        android:layout_marginTop="8dp"

                        app:layout_constraintTop_toBottomOf="@id/mars_image"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                <TextView
                    android:id="@+id/sol_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    app:layout_constraintTop_toTopOf="@id/sol_label"
                    app:layout_constraintStart_toStartOf="@id/landing_date_text_view"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="1000"
                    />

                <TextView
                    android:id="@+id/earth_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earth_date"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@id/sol_label"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/earth_date_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    app:layout_constraintTop_toTopOf="@id/earth_date_label"
                    app:layout_constraintStart_toStartOf="@id/landing_date_text_view"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="11.02.2002"
                    />

                <TextView
                    android:id="@+id/rover_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mars_rover"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@id/earth_date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/rover_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    app:layout_constraintTop_toTopOf="@id/rover_label"
                    app:layout_constraintStart_toStartOf="@id/landing_date_text_view"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="Curiosity"
                    />

                <TextView
                    android:id="@+id/landing_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/landing_date"
                    
                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    android:layout_marginTop="8dp"
                    
                    app:layout_constraintTop_toBottomOf="@id/rover_label"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                
                <TextView
                    android:id="@+id/landing_date_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    
                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    android:layout_marginStart="16dp"

                    app:layout_constraintTop_toTopOf="@id/landing_date_label"
                    app:layout_constraintStart_toEndOf="@id/landing_date_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    
                    tools:text="11.02.2002"
                    />
                
                <TextView
                    android:id="@+id/launch_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_date"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@id/landing_date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/launch_date_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    app:layout_constraintTop_toTopOf="@id/launch_date_label"
                    app:layout_constraintStart_toStartOf="@id/landing_date_text_view"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="11.02.2002"
                    />


                <TextView
                    android:id="@+id/status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@id/launch_date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/status_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    app:layout_constraintTop_toTopOf="@id/status_label"
                    app:layout_constraintStart_toStartOf="@id/landing_date_text_view"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="Active"
                    />

                <TextView
                    android:id="@+id/camera_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@id/status_label"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <TextView
                    android:id="@+id/camera_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    style="@style/BaseStyleForDescriptionFragmentTextView"

                    app:layout_constraintTop_toTopOf="@id/camera_label"
                    app:layout_constraintStart_toStartOf="@id/landing_date_text_view"
                    app:layout_constraintEnd_toEndOf="parent"

                    tools:text="Mast Camera"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>